# repo-language-detect

./: .gitignore  LICENSE  MANIFEST.in  PKGBUILD  PKGBUILD-README.md  PKGBUILD.git  PKGBUILD.pypi  README.md  RELEASE_NOTES.md  RELEASE_NOTES_1.0.0.md  TAG_INFO.md  TAG_NOTES_1.0.0.txt  detect_repo_language.py  prepare-arch-package.sh  pyproject.toml  setup.py
languages/: README.md  TEMPLATE copy.json  TEMPLATE.json  c++.json  c-sharp.json  css.json  dockerfile.json  flow.json  go.json  haskell.json  html.json  javascript.json  json.json  kotlin.json  markdown.json  perl.json  php.json  python.json  r.json  sql.json  toml.json  xml.json  yaml.json
src/detect-repo-language/: __init__.py  __main__.py  language.py  parser.py
src/detect-repo-language/languages/: TEMPLATE.json  c-sharp.json  erlang.json  json.json  markdown.json  scala.json  typescript.json
src/detect_repo_language/: __init__.py  analyze.py  cache.py  formatter.py
src/detect_repo_language/languages/: README.md  c.json  css.json  elixir.json  html.json  java.json  julia.json  makefile.json  ruby.json  rust.json  shell.json  swift.json  toml.json  xml.json
tests/: README.md  test_all.sh  test_basic.sh  test_cache.sh  test_git_detection.sh  test_languages.sh  test_pkgbuild.sh  test_prefix.sh  test_wheel_build.sh
