[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detect-repo-language"
version = "1.3.0"
description = "Detect the primary programming language of a repository by analyzing file extensions and lines of code"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Alexandra"}
]
keywords = ["language", "detection", "repository", "analysis", "starship"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/lang-detect"
Documentation = "https://github.com/yourusername/lang-detect#readme"
Repository = "https://github.com/yourusername/lang-detect.git"
Issues = "https://github.com/yourusername/lang-detect/issues"

[project.scripts]
detect-repo-language = "detect_repo_language:main"

[tool.setuptools]
py-modules = ["detect_repo_language"]
include-package-data = true
